--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,12 @@
 [tool.poetry]
 name = "tg-bot"
 version = "0.1.0"
-description = "Telegram bot with SQLite database"
-authors = ["Your Name <your.email@example.com>"]
+description = ""
+authors = ["Developer <dev@example.com>"]
+
 
 [tool.poetry.dependencies]
-python = "^3.8"
-aiogram = "^2.25"
-aiosqlite = "^0.19.0"
-python-dotenv = "^1.0.0"
+python = "^3.8"  # укажите вашу версию Python
 
-[tool.poetry.dev-dependencies]
-pytest = "^7.4.0"
-black = "^23.3.0" 
+
+
