--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ DB_PASSWORD=postgres
 # 1C connection
 USER_1C=Admin
 USER_1C_PASSWORD=123
+
+# Rclone settings
+RCLONE_REMOTE=your_remote_name
+RCLONE_PATH=path/in/cloud
