--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
+# Bot settings
 BOT_TOKEN=your_bot_token_here
 ADMIN_ID=your_admin_id_here
+
+# SSH connection
 SSH_HOST=your_server_ip
 SSH_USERNAME=your_ssh_username
 SSH_PASSWORD=your_ssh_password
